fix logo alignment

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ ng\:form
 .logo
 {
     float: left;
-    margin: 15px 0 0 15px;
+    margin: 14px 0 0 15px;
 }
 
 body
